fix(slash): rotate only header glyphicon collapse card

--- a/slash/css/src/Accordion/Accordion.scss
+++ b/slash/css/src/Accordion/Accordion.scss
@@ -41,7 +41,7 @@ $minHeight: 3rem;
   }
 
   &__details[open] {
-    .glyphicon {
+    .glyphicon-menu-down {
       transform: rotate(180deg);
     }
   }
